[BUGFIX] Fix overflow and animation of inspector collapsing
This fixes overflow issues where e.g. select boxes was cut in half due
to overflow hidden. This also removes the css3 transition since it
causes too many issues and unable to solve the issue correctly.

Related: #45320
Original-Commit-Hash: 2eb719b7b51ea0f572a7a57f7ee0a36ca479f8e0

--- a/TYPO3.Neos/Resources/Public/StyleSheet/style.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/style.scss
@@ -413,16 +413,6 @@ body {
 			border-radius: 3px;
 			color: #333;
 		}
-		.t3-inspector-field {
-			overflow: hidden;
-			@include transition-property('max-height');
-			@include transition-duration(.2s);
-		}
-		.t3-inspector-content-hidden {
-			.t3-inspector-field {
-				max-height: 0 !important;
-			}
-		}
 	}
 }
 
